Implement v1.BackendControllerServer and v1.PeerControllerServer
