# pkg/apiserver/controller/peer_controller.go
@@ -1,0 +1,32 @@
+/*
+Copyright 2021 The KunStack Authors.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+http://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
+package controller
+
+import v1 "github.com/aapelismith/kun/pkg/apiserver/apis/v1"
+
+var _ v1.PeerControllerServer = (*PeerController)(nil)
+
+type PeerController struct {
+	v1.PeerControllerServer
+}
+
+func (p PeerController) WatchUpstreams(request *v1.WatchUpstreamsRequest, server v1.PeerController_WatchUpstreamsServer) error {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (p PeerController) ConnectUpstream(server v1.PeerController_ConnectUpstreamServer) error {
+	//TODO implement me
+	panic("implement me")
+}
